# gwak

./: .gitignore  .gitmodules  README.md  environment.yaml  pyproject.toml
docs/: ._generate-json.js  HL_short0-195.json  HL_short1-195.json  HV_short0-200.json  HV_short1-200.json  all_O3.json  all_O3_cat2.json  all_O3_new.json  all_O3a_spectrogram.json  all_O3a_spectrogram_boom.json  all_O3a_spectrogram_old.json  all_O3a_spectrogram_paper.json  all_O3a_spectrogram_pearson.json  all_O3b_spectrogram.json  all_O3b_spectrogram_new.json  burst_trainingO3a.json  burst_trainingO3b.json  extract_gps.py  generate-json.js  gps.npy  index.html
gwak/: Snakefile  efficiency_plots.py  evaluate_one_month.py  postprocess_scores.py
gwak/deploy/: README.md  deploy.def  deploy.smk  pyproject.toml
gwak/deploy/deploy/: analyzer.py  bbc_unpack.py  cli.py  cli_deploy.py  cli_export.py  cli_infer.py  combine_models.py  condor_handler.py  condor_infer_module.py  export.py  infer.py  infer_data.py  infer_module.py  save_far.py  slurm_handeler.py  snippet.py  triton_excution.py  triton_inj_excution.py
gwak/deploy/deploy/config/: analysis.yaml  ccsn.toml  ccsn.yaml  deploy.yaml  export.yaml  infer.yaml  infer_condor.yaml  outlier.yaml  plot_bbc.yaml  slurm_infer.yaml
gwak/deploy/deploy/libs/: __init__.py  cluster_tools.py  condor_tools.py  ensemble.py  find_gpus.py  infer_blocks.py  infer_core.py  infer_utils.py  loggers.py  time_slides.py  whiten_utils.py
gwak/deploy/notebooks/: roc_curves.ipynb
scripts/: README.md  compute_embeddings.py  efficiency_analysis.py  test_embeddings.py
(+213 files in other folders)
