[project]
name = "deploy"
version = "0.1.0"
description = "Triton inference for GWAK"
authors = [
    { name = "Andy Chen", email = "andy.c.80297@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.2",
    "cowsay>=6.1",
    "h5py>=3.15.1",
    "jsonargparse>=4.45.0",
    "matplotlib>=3.10.8",
    "ml4gw",
    "ml4gw-hermes",
    "onnx>=1.17.0",
    "pyrate-limiter>=4.0.2",
    "scipy>=1.15.3",
    "torch<2.6",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest~=7.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.0.0,<2",
    "pytest~=7.3",
]

test = [
    "cowsay>=6.1",
]

[tool.uv]
extra-index-url = ["https://pypi.nvidia.com/"]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
ml4gw = { path = "../../ml4gw", editable = true }
ml4gw-hermes = { path = "../../hermes", editable = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
